<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft">
    <Button
        android:id="@+id/manageMenuItems"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:text="@string/manageMenuItemsButton" />
    <Button
        android:id="@+id/viewDeliveryArea"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:text="@string/viewDeliveryAreaButton" />
    <Button
        android:id="@+id/viewSales"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:text="@string/viewSalesButton" />
    <Button
        android:id="@+id/manageDrivers"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:text="@string/manageDriversButton"/>
    <Button
        android:id="@+id/rateDrivers"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:text="@string/rateDriversButton"/>
    <Button
        android:id="@+id/deliveryHours"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:text="@string/deliveryHours"/>


</LinearLayout>