<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_restaurant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.dleemcewen.tandemfieri.CreateRestaurant">

    <TextView
        android:text="@string/createRestaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/title_text_size"
        android:id="@+id/title" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:id="@+id/restaurantName"
        android:textSize="@dimen/regular_text_size"
        android:hint="@string/hintRestaurantName"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:text="@string/restaurantAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:textSize="@dimen/title_text_size"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/restaurantName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/regular_text_size"
        android:id="@+id/street"
        android:hint="@string/hintStreet"
        android:layout_below="@+id/address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPostalAddress" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/regular_text_size"
        android:id="@+id/city"
        android:hint="@string/hintCity"
        android:layout_below="@+id/street"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textCapWords" />
    <LinearLayout
        android:id="@+id/cityStateContainer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/city">
        <Spinner
            android:id="@+id/state"
            android:hint="@string/hintState"
            android:layout_weight="1"
            android:textSize="@dimen/regular_text_size"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/regular_text_size"
            android:id="@+id/zipcode"
            android:hint="@string/hintZipcode"
            android:inputType="number" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:id="@+id/delivery"
        android:text="@string/restaurantDelivery"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/cityStateContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="@dimen/regular_text_size"
        android:layout_below="@+id/delivery"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/deliveryCharge"
        android:hint="@string/hintDeliveryCharge" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:id="@+id/businessHours"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/deliveryCharge"
        android:text="@string/businessHours" />
    <LinearLayout
        android:id="@+id/actionsContainer"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/businessHours">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/regular_text_size"
            android:id="@+id/cancelRestaurant" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/createButton"
            android:textSize="@dimen/regular_text_size"
            android:id="@+id/createRestaurant" />
    </LinearLayout>
</RelativeLayout>
