<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_almost_done"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.dleemcewen.tandemfieri.AlmostDoneActivity">

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:text="@string/almostDoneTitle"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/almostDone" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:hint="@string/hintPassword"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/almostDone"
        android:layout_marginTop="30dp"
        android:id="@+id/password"
        app:met_primaryColor="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:hint="@string/hintPasswordConfirm"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        android:id="@+id/confrimPassword"
        app:met_primaryColor="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:text="@string/userFilter"
        android:textColor="#3975ff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confrimPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/userFilter" />

    <RadioGroup
        android:id="@+id/radioFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userFilter"
        android:layout_centerHorizontal="true" >
    <RadioButton
        android:text="@string/dining"
        android:textSize="16sp"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/diningRadio"
        android:buttonTint="@color/blue"
        android:layout_below="@+id/userFilter"
        />

    <RadioButton
        android:text="@string/restaurant"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/restaurantRadio"
        android:layout_below="@+id/diningRadio"
        android:layout_alignLeft="@+id/diningRadio"
        android:layout_alignStart="@+id/diningRadio"
        android:buttonTint="@color/blue"/>

    <RadioButton
        android:text="@string/driver"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/driverRadio"
        android:buttonTint="@color/blue"
        android:layout_below="@+id/restaurantRadio"
        android:layout_alignLeft="@+id/diningRadio"
        android:layout_alignStart="@+id/diningRadio" />
    </RadioGroup>

    <com.beardedhen.androidbootstrap.BootstrapButton
        style="@style/danger_button"
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/cancelButton" />
    <com.beardedhen.androidbootstrap.BootstrapButton
        style="@style/success_button"
        android:text="Create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/createButton" />

</RelativeLayout>
